[package]
name = "merge-streams"
version = "0.1.1"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/merge-streams"
description = "Merge multiple streams into one"
readme = "README.md"
edition = "2021"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]
repository = "https://github.com/phil-opp/merge-streams"

[dependencies]
futures-core = "0.3.16"
pin-project = "1.0.8"

[dev-dependencies]
futures-lite = "1.12.0"
futures = "0.3.19"
